<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SCUT行车记录仪</string>
    <string name="action_settings">Settings</string>
    <string name="show_location">回放路径</string>
    <string name="save_location">保存路径</string>
    <string name="start">开始录像</string>
    <string name="stop">停止录像</string>
    <string name="record_profile">录像分辨率</string>
    <string name="record_quality">录像质量</string>
    <string name="record_storage">储存空间</string>
    <string name="record_time">录像分段时长</string>
    <string name="id">用户id</string>
    <string name="record_avail_time_name">可录像总时长：</string>

</resources>
