<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <SurfaceView
        android:id="@+id/surfaceview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/start" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/stop" />

    <ImageButton
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/surfaceview"
        android:layout_alignTop="@+id/surfaceview"
        android:src="@android:drawable/ic_menu_preferences"
        android:contentDescription="@string/app_name"/>

	<ScrollView
	    android:id="@+id/scroll"
	    android:layout_width="300dp"
	    android:layout_height="60dp"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:background="#66FFFFFF"
	    android:fadingEdge="vertical"
	    android:scrollbars="vertical" >

	    <TextView
	        android:id="@+id/log"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp"
	        android:textSize="16sp" />
	</ScrollView>

</RelativeLayout>