<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
		<RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
		    android:layout_marginLeft="@dimen/activity_horizontal_margin"
		    android:layout_marginRight="@dimen/activity_horizontal_margin"
		    android:layout_marginTop="@dimen/activity_horizontal_margin"
		    android:layout_marginBottom="@dimen/activity_horizontal_margin" >
	
			<TextView 
				android:id="@+id/record_profile"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:textAppearance="?android:attr/textAppearanceSmall" 
			    android:text="@string/record_profile" />
	
		     <Spinner
		         android:id="@+id/profile_select"
		         android:layout_width="200dp"
		         android:layout_height="wrap_content"
		         android:layout_alignParentRight="true"
		         android:layout_alignParentTop="true" />
		</RelativeLayout>
		
		<RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" 
		    android:layout_marginLeft="@dimen/activity_horizontal_margin"
		    android:layout_marginRight="@dimen/activity_horizontal_margin"
		    android:layout_marginTop="@dimen/activity_horizontal_margin"
		    android:layout_marginBottom="@dimen/activity_horizontal_margin" >
	
			<TextView 
				android:id="@+id/record_quality"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:textAppearance="?android:attr/textAppearanceSmall" 
			    android:text="@string/record_quality" />
	
		     <Spinner
		         android:id="@+id/quality_select"
		         android:layout_width="200dp"
		         android:layout_height="wrap_content"
		         android:layout_alignParentRight="true"
		         android:layout_alignParentTop="true"
		         android:entries="@array/quality_name" />
		</RelativeLayout>
		
		<RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginLeft="@dimen/activity_horizontal_margin"
		    android:layout_marginRight="@dimen/activity_horizontal_margin"
		    android:layout_marginTop="@dimen/activity_horizontal_margin"
		    android:layout_marginBottom="@dimen/activity_horizontal_margin" >
	
			<TextView
			    android:id="@+id/record_storage"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:text="@string/record_storage"
			    android:textAppearance="?android:attr/textAppearanceSmall" />
	
			<Spinner
		         android:id="@+id/storage_select"
		         android:layout_width="200dp"
		         android:layout_height="wrap_content"
		         android:layout_alignParentRight="true"
		         android:layout_alignParentTop="true" 
		         android:entries="@array/storage_name" />
		</RelativeLayout>
		
		<ImageView   
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
	        android:background="#aaaaaa" 
	        android:contentDescription="@string/app_name"/>  
	
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_marginLeft="@dimen/activity_horizontal_margin"
		    android:layout_marginRight="@dimen/activity_horizontal_margin"
		    android:layout_marginTop="@dimen/activity_horizontal_margin"
		    android:layout_marginBottom="@dimen/activity_horizontal_margin" >
	
			<TextView
			    android:id="@+id/record_avail_time_name"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:layout_centerHorizontal="true"
			    android:text="@string/record_avail_time_name"
			    android:textColor="#555555"
			    android:textAppearance="?android:attr/textAppearanceSmall" />
			
			<TextView
			    android:id="@+id/record_avail_time"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_toRightOf="@id/record_avail_time_name"
			    android:textColor="#555555"
			    android:textAppearance="?android:attr/textAppearanceSmall" />
		</RelativeLayout>
		
		<ImageView   
	        android:layout_width="fill_parent"
	        android:layout_height="1dp"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
	        android:background="#aaaaaa" 
	        android:contentDescription="@string/app_name"/>  
	        
		<RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginLeft="@dimen/activity_horizontal_margin"
		    android:layout_marginRight="@dimen/activity_horizontal_margin"
		    android:layout_marginTop="@dimen/activity_horizontal_margin"
		    android:layout_marginBottom="@dimen/activity_horizontal_margin" >
	
			<TextView
			    android:id="@+id/record_time"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:text="@string/record_time"
			    android:textAppearance="?android:attr/textAppearanceSmall" />
	
			<Spinner
		         android:id="@+id/time_select"
		         android:layout_width="200dp"
		         android:layout_height="wrap_content"
		         android:layout_alignParentRight="true"
		         android:layout_alignParentTop="true"
		         android:entries="@array/time_name" />
		</RelativeLayout>
	
		<RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_marginLeft="@dimen/activity_horizontal_margin"
		    android:layout_marginRight="@dimen/activity_horizontal_margin"
		    android:layout_marginTop="@dimen/activity_horizontal_margin"
		    android:layout_marginBottom="@dimen/activity_horizontal_margin" >
	
			<TextView
			    android:id="@+id/id_name"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:text="@string/id"
			    android:textAppearance="?android:attr/textAppearanceSmall" />
			<EditText
			    android:id="@+id/id"
			    android:layout_width="200dp"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_alignParentTop="true" 
				android:inputType="textEmailAddress"
			    android:ems="20" >
			</EditText>
		</RelativeLayout>
    </LinearLayout>
</ScrollView>